Remove SecurityManager references and update to JVMTI implementation
Major documentation update to reflect the current JVMTI-based implementation:

**Java Compatibility**:
- Update minimum Java version from 17-23 to Java 21+
- Remove Java 24+ warnings (JVMTI works on all Java 21+ versions)
- Remove `-Djava.security.manager=allow` JVM argument requirements

**Implementation Updates**:
- Document JVMTI agent as the single unified implementation
- Remove references to SecurityManager, SECURITY_POLICY, SOCKET_WRAPPER, BYTE_BUDDY
- Explain how JVMTI intercepts socket/DNS at native level
- Clarify that same implementation works for JVM and Android

**Files Updated**:
- README.md: Java compatibility, "How It Works" section
- CLAUDE.md: Critical requirements, network blocking implementation
- docs/compatibility-matrix.md: Java versions, platform details, implementation section
- docs/advanced-configuration.md: Replace "Implementation Selection" with "Implementation"
- docs/setup-guides/*.md: Remove SecurityManager JVM args, update requirements
- Makefile: Clean up JVMTI test target descriptions

**Files Removed**:
- docs/migration-java24.md: No longer needed (JVMTI works on Java 24+)

This brings all documentation in line with the JVMTI refactoring completed in
previous commits (86ba2df, a091b24, 3020f16, 2c2ac4f, 26b4faa).

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>