@@ -4,7 +4,7 @@ This guide shows how to set up the JUnit No-Network Extension for a pure JVM pro
 
 ## Requirements
 
-- Java 17-23 (Java 24+ not supported due to SecurityManager removal)
+- Java 21+ (uses JVMTI agent for network blocking)
 - Gradle 7.x or later (tested with 8.11.1)
 - JUnit 5.8+ (tested with 5.11.3)
 - Kotlin 1.9+ (tested with 2.1.0)
@@ -22,7 +22,7 @@ plugins {
 }
 
 kotlin {
-    jvmToolchain(21) // Or 17-23
+    jvmToolchain(21)
 }
 
 // Configure the plugin
@@ -34,9 +34,6 @@ junitNoNetwork {
 // Configure test tasks
 tasks.withType<Test> {
     useJUnitPlatform()
-
-    // Required for Java 21+
-    jvmArgs("-Djava.security.manager=allow")
 }
 ```
 
@@ -61,7 +58,6 @@ dependencies {
 
 tasks.withType<Test> {
     useJUnitPlatform()
-    jvmArgs("-Djava.security.manager=allow") // Required for Java 21+
 }
 ```
 
@@ -327,7 +323,6 @@ fun `blocks specific hosts`() {
 
 ```kotlin
 tasks.withType<Test> {
-    jvmArgs("-Djava.security.manager=allow")
 }
 ```
 
@@ -338,10 +333,6 @@ tasks.withType<Test> {
 2. Is the Gradle plugin applied correctly?
 3. Is `junit-platform.properties` configured (if not using plugin)?
 4. Check with debug mode: `-Djunit.nonetwork.debug=true`
-
-### Issue: Network blocking not working on Java 24+
-
-**This is expected**. Java 24+ permanently removes SecurityManager. See the [Migration Guide](../migration-java24.md) for alternatives.
 
 ### Issue: OkHttp exception message is unclear
 
@@ -370,5 +361,4 @@ See the `plugin-integration-tests/jvm-junit5` module for a complete working exam
 
 - [Compatibility Matrix](../compatibility-matrix.md) - Full compatibility information
 - [HTTP Client Guides](../clients/) - Detailed guides for each HTTP client
-- [Migration Guide: Java 24+](../migration-java24.md) - Migrating away from SecurityManager
 - [Advanced Configuration](../advanced-configuration.md) - All configuration options
