@@ -4,7 +4,7 @@ This guide shows how to set up the JUnit No-Network Extension for a Kotlin Multi
 
 ## Requirements
 
-- Java 17-23 (Java 24+ not supported due to SecurityManager removal)
+- Java 21+ (uses JVMTI agent for network blocking)
 - Gradle 7.x or later (tested with 8.11.1)
 - Kotlin 1.9+ (tested with 2.1.0)
 - JUnit 5.8+ (tested with 5.11.3)
@@ -13,7 +13,7 @@ This guide shows how to set up the JUnit No-Network Extension for a Kotlin Multi
 
 | Platform | Network Blocking | Notes |
 |----------|-----------------|-------|
-| JVM | ✅ Fully Supported | SecurityManager-based blocking |
+| JVM | ✅ Fully Supported | JVMTI agent-based blocking |
 | Android | ✅ Fully Supported | Requires Robolectric for unit tests |
 | iOS | ⚠️ API Only | Provides API structure but doesn't block |
 
@@ -112,7 +112,6 @@ android {
 // Configure JUnit Platform for JVM tests
 tasks.withType<Test> {
     useJUnitPlatform()
-    jvmArgs("-Djava.security.manager=allow") // Required for Java 21+
 }
 ```
 
@@ -388,7 +387,6 @@ fun testNetworkBlocking() {
 
 ```kotlin
 tasks.withType<Test> {
-    jvmArgs("-Djava.security.manager=allow")
 }
 ```
 
@@ -457,4 +455,3 @@ See the integration test projects for complete working examples:
 - [Android + JUnit 4 Setup Guide](android-junit4.md) - Android-specific details
 - [KMP + JUnit 4 Setup Guide](kmp-junit4.md) - JUnit 4 alternative
 - [Ktor Client Guide](../clients/ktor.md) - Ktor-specific documentation
-- [Migration Guide: Java 24+](../migration-java24.md) - Migrating away from SecurityManager
